--- a/plays.html
+++ b/plays.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Постановки и пьесы</title>
-    <link rel="icon" href="./images/mask_icon.svg" type="image/svg+xml">
+    <link rel="icon" href="./img/mask_icon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style_header.css">
     <link rel="stylesheet" href="style_init.css">
 </head>
