--- a/plays.html
+++ b/plays.html
@@ -52,9 +52,7 @@
             <p>Городничий сообщает всем городским чиновникам, что до него донеслась весть о прибытии столичного ревизора. Проверки чиновники пугаются, потому что все они берут взятки, плохо работают и в учреждениях, находящихся в их подчинении, царит бардак. Практически сразу за известием появляется и второе. До них доходит, что в местной гостинице остановился человек хорошо одетый и похожий на ревизора.&nbsp;</p></div>
     </main>
     <footer>
-        <div class="fclick">
-            Выключить свет
-        </div>
+        <div class="fclick">Выключить свет</div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="index.js"></script> 
