--- a/ballet.html
+++ b/ballet.html
@@ -48,9 +48,7 @@
         </div>
     </main>
     <footer>
-        <div class="fclick">
-            Выключить свет
-        </div>
+        <div class="fclick">Выключить свет</div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="index.js"></script> 
